2008-04-01  Dan Bernstein  <mitz@apple.com>

        - Mac build fix

        * WebCore.xcodeproj/project.pbxproj: Made FontRenderingMode.h private.

2008-04-01  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        - move the FontRenderingMode enumeration into its own header file

        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * loader/CachedFont.h:
        * platform/graphics/FontDescription.h:
        * platform/graphics/FontRenderingMode.h: Added.
        (WebCore::):
        * platform/graphics/gtk/FontCustomPlatformData.h:
        * platform/graphics/mac/FontCustomPlatformData.h:
        * platform/graphics/qt/FontCustomPlatformData.h:
        * platform/graphics/win/FontCustomPlatformData.h:

2008-04-01  Darin Adler  <darin@apple.com>

        Reviewed by Mitz.

        - fix <rdar://problem/5833351> REGRESSION: Leak in JSCustomXPathNSResolver::create
        - fix <rdar://problem/5833216> REGRESSION: Leak in CSSStyleSelector::addViewportDependentMediaQueryResult

        * bindings/js/JSCustomXPathNSResolver.cpp:
        (WebCore::JSCustomXPathNSResolver::create): Added a missing adoptRef.
        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::~CSSStyleSelector): Added a missing call to deleteAllValues.

2008-04-01  Darin Adler  <darin@apple.com>

        Reviewed by Sam.

        - speed up hasChildNodes, which does not need to be virtual

        * dom/ContainerNode.cpp: Removed hasChildNodes.
        * dom/ContainerNode.h: Added non-virtual inline hasChildNodes.
        * dom/Node.cpp: Removed hasChildNodes.
        * dom/Node.h: Added non-vritual inline hasChildNodes.

2008-04-01  Simon Hausmann  <hausmann@webkit.org>

        Fix the non-mac build.

        * page/AXObjectCache.h: Don't reference AccessibilityObjects when
        building without accessibility.
        * page/AccessibilityObject.h: Don't include RetainPtr.h for non-mac
        builds.
